update doco and .env.example

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,3 +1,7 @@
+# NOTES: 
+# - Do not use double-quotes and do not delete any of the variables.
+# - Make sure that NEXTAUTH_URL=http://localhost:3000 has no comments in the same line.
+
 # Update your Azure OpenAI details
 # AZURE_OPENAI_API_INSTANCE_NAME should be just the name of azure openai resource and not the full url; 
 # AZURE_OPENAI_API_DEPLOYMENT_NAME should be deployment name from your azure openai studio and not the model name.
@@ -11,7 +15,7 @@ AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME=
 # Update your admin email addresses - comma separated
 ADMIN_EMAIL_ADDRESS="you@email.com,you2@email.com"
 
-# You must have atleast one of the following auth providers configured
+# Identity provider is optional if you are running in development mode locally (npm run dev)
 AUTH_GITHUB_ID=
 AUTH_GITHUB_SECRET=
 
