--- a/src/.env.example
+++ b/src/.env.example
@@ -38,5 +38,9 @@ AZURE_SEARCH_INDEX_NAME=
 AZURE_SEARCH_API_VERSION="2023-07-01-Preview"
 
 # Azure AI Document Intelligence to extract content from your data
-AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT="https://REGION.api.cognitive.microsoft.com/"
+AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT="https://NAME.api.cognitive.microsoft.com/"
 AZURE_DOCUMENT_INTELLIGENCE_KEY=
+
+# Azure Speech to Text to convert audio to text
+AZURE_SPEECH_REGION=""
+AZURE_SPEECH_KEY=""
