--- a/src/.env.example
+++ b/src/.env.example
@@ -46,5 +46,7 @@ AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT="https://NAME.api.cognitive.microsoft.com/"
 AZURE_DOCUMENT_INTELLIGENCE_KEY=
 
 # Azure Speech to Text to convert audio to text
-AZURE_SPEECH_REGION=""
-AZURE_SPEECH_KEY=""
+# Enabled must be set to "true" any other value will disable the feature
+NEXT_PUBLIC_SPEECH_ENABLED=true
+AZURE_SPEECH_REGION=
+AZURE_SPEECH_KEY=
