--- a/src/package.json
+++ b/src/package.json
@@ -35,6 +35,7 @@
     "@uiw/react-codemirror": "^4.21.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "debug": "^4.3.6",
     "eventsource-parser": "^1.1.1",
     "lucide-react": "^0.309.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
