--- a/.github/workflows/azure-dev-validate.yml
+++ b/.github/workflows/azure-dev-validate.yml
@@ -24,7 +24,7 @@ jobs:
           inlineScript: az config set bicep.use_binary_from_path=false && az bicep build -f infra/main.bicep --stdout
 
       - name: Run Microsoft Security DevOps Analysis
-        uses: microsoft/security-devops-action@preview
+        uses: microsoft/security-devops-action@latest
         id: msdo
         continue-on-error: true
         with:
