--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "debug": "next --nolazy"
   },
   "dependencies": {
     "@azure/ai-form-recognizer": "^5.0.0",
@@ -35,7 +36,7 @@
     "@uiw/react-codemirror": "^4.21.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "debug": "^4.3.6",
+    "debug": "^4.3.7",
     "eventsource-parser": "^1.1.1",
     "lucide-react": "^0.309.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
@@ -63,6 +64,6 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
