minor updates to templates and based on 4o update

--- a/src/.env.example
+++ b/src/.env.example
@@ -49,7 +49,7 @@ AZURE_SEARCH_NAME=
 AZURE_SEARCH_INDEX_NAME=
 
 # Azure AI Document Intelligence to extract content from your data
-AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT=https://NAME.api.cognitive.microsoft.com/
+AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT=https://NAME.cognitiveservices.azure.com/
 AZURE_DOCUMENT_INTELLIGENCE_KEY=
 
 # max upload document size in bytes
