az cli bicep updates

--- a/.github/workflows/azure-dev-validate.yml
+++ b/.github/workflows/azure-dev-validate.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Build Bicep for linting
         uses: azure/CLI@v2
         with:
+          azcliversion: latest
           inlineScript: az config set bicep.use_binary_from_path=false && az bicep build -f infra/main.bicep --stdout
 
       - name: Run Microsoft Security DevOps Analysis
