--- a/.github/workflows/open-ai-app.yml
+++ b/.github/workflows/open-ai-app.yml
@@ -27,13 +27,8 @@ jobs:
           cd ./src
           npm install
           npm run build --if-present
-          cd ..
-
-      - name: ⚙️ npm install and build
-        run: |
-          cd ./src
-          npm install
-          NEXT_PUBLIC_FEEDBACK_LINK=${{ secrets.NEXT_PUBLIC_FEEDBACK_LINK }} npm run build --if-present
+          env:
+            NEXT_PUBLIC_FEEDBACK_LINK: ${{ secrets.NEXT_PUBLIC_FEEDBACK_LINK }}
           cd ..
 
       - name: 📂 Copy standalone into the root
