--- a/.github/workflows/open-ai-app.yml
+++ b/.github/workflows/open-ai-app.yml
@@ -4,7 +4,9 @@ name: Build & deploy Next.js app to Azure Web App
 on:
   # Automatically trigger it when detected changes in repo
   push:
-    branches: [main]
+    branches: 
+      - main
+      - '**'  # This will trigger on all branches
 
   # Allow manual workflow trigger
   workflow_dispatch:
@@ -17,7 +19,7 @@ jobs:
       - name: 🌱 Checkout to the branch
         uses: actions/checkout@v4
 
-      - name: 🍏 Set up Node.js version
+      - name: 🔍 Set up Node.js version
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
@@ -57,14 +59,62 @@ jobs:
           name: Nextjs-site
           path: ./site-deploy/Nextjs-site.zip
 
-  deploy:
+  deploy-dev:
     runs-on: ubuntu-latest
     needs: build
+    # Only deploy to dev if NOT on main branch
+    if: github.ref != 'refs/heads/main'
+    environment:
+      name: Development
+
+    steps:
+      - name: 🔍 Set up Node.js version
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+
+      - name: ⬇️ Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: Nextjs-site
+
+      - name: 🗝️ Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS_DEV }}
+
+      # Set the build during deployment setting to false
+      - name: Azure CLI script
+        uses: azure/CLI@v2
+        with:
+          inlineScript: |
+            rg=$(az webapp list --query "[?name=='${{ secrets.AZURE_APP_SERVICE_NAME_DEV }}'].resourceGroup" --output tsv)
+            echo Setting SCM_DO_BUILD_DURING_DEPLOYMENT=false on app service ${{ secrets.AZURE_APP_SERVICE_NAME_DEV }}
+            az webapp config appsettings set -n ${{ secrets.AZURE_APP_SERVICE_NAME_DEV }} -g $rg --settings SCM_DO_BUILD_DURING_DEPLOYMENT=false -o none
+            echo Setting --startup-file=\"node server.js\" on app service ${{ secrets.AZURE_APP_SERVICE_NAME_DEV }}
+            az webapp config set --startup-file="node server.js" -n ${{ secrets.AZURE_APP_SERVICE_NAME_DEV }} -g $rg -o none
+            sleep 10
+
+      - name: 🚀 Deploy to Azure Web App (Dev)
+        id: deploy-to-webapp-dev
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ secrets.AZURE_APP_SERVICE_NAME_DEV }}
+          package: ${{ github.workspace }}/Nextjs-site.zip
+
+      - name: 🧹 Cleanup
+        run: rm ${{ github.workspace }}/Nextjs-site.zip
+
+  deploy-production:
+    runs-on: ubuntu-latest
+    needs: build
+    # Only deploy to production if on main branch
+    if: github.ref == 'refs/heads/main'
     environment:
       name: Production
 
     steps:
-      - name: 🍏 Set up Node.js version
+      - name: 🔍 Set up Node.js version
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
@@ -79,7 +129,7 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Set the build during deployment setting to false. This setting was added in the templates to all azd to work, but breaks deployment via webapps-deploy
+      # Set the build during deployment setting to false
       - name: Azure CLI script
         uses: azure/CLI@v2
         with:
@@ -91,8 +141,8 @@ jobs:
             az webapp config set --startup-file="node server.js" -n ${{ secrets.AZURE_APP_SERVICE_NAME }} -g $rg -o none
             sleep 10
 
-      - name: 🚀 Deploy to Azure Web App
-        id: deploy-to-webapp
+      - name: 🚀 Deploy to Azure Web App (Production)
+        id: deploy-to-webapp-prod
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ secrets.AZURE_APP_SERVICE_NAME }}
