--- a/.github/workflows/open-ai-app.yml
+++ b/.github/workflows/open-ai-app.yml
@@ -30,8 +30,7 @@ jobs:
           npm install
           npm run build --if-present
           cd ..
-        env:
-          NEXT_PUBLIC_FEEDBACK_LINK: ${{ secrets.NEXT_PUBLIC_FEEDBACK_LINK }}
+        # NEXT_PUBLIC_FEEDBACK_LINK no longer injected at build: fetched at runtime via API route
 
       - name: 📂 Copy standalone into the root
         run: cp -R ./src/.next/standalone ./site-deploy
