--- a/.github/workflows/open-ai-app.yml
+++ b/.github/workflows/open-ai-app.yml
@@ -4,9 +4,9 @@ name: Build & deploy Next.js app to Azure Web App
 on:
   # Automatically trigger it when detected changes in repo
   push:
-    branches: 
+    branches:
       - main
-      - '**'  # This will trigger on all branches
+      - dev
 
   # Allow manual workflow trigger
   workflow_dispatch:
@@ -59,10 +59,9 @@ jobs:
           path: ./site-deploy/Nextjs-site.zip
 
   deploy-dev:
+    if: github.ref == 'refs/heads/dev'
     runs-on: ubuntu-latest
     needs: build
-    # Only deploy to dev if NOT on main branch
-    if: github.ref != 'refs/heads/main'
     environment:
       name: Development
 
